--- a/roles/configure_JFS/vars/main.yml
+++ b/roles/configure_JFS/vars/main.yml
@@ -13,3 +13,11 @@ FSs:
     fs_state: present
     fs_size: 128M
     fs_auto_mount: true
+    
+  - fs_name: "/samir"
+    fs_type: jfs2
+    vg_name: rootvg
+    fs_state: present
+    fs_size: 128M
+    fs_auto_mount: true
+    
